commit before refactor